--- a/PokerTournament v4/PokerTournament/PokerTournament.csproj
+++ b/PokerTournament v4/PokerTournament/PokerTournament.csproj
@@ -45,13 +45,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
-    <Compile Include="player5.cs" />
+    <Compile Include="player4.cs" />
     <Compile Include="Deck.cs" />
     <Compile Include="Evaluate.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Human.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="Player4.cs" />
+    <Compile Include="Player4_older.cs" />
     <Compile Include="PlayerAction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
